--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dot": "^1.1.3",
+    "dotenv": "^16.3.1",
+    "env": "^0.0.2",
     "express": "^4.18.1",
     "helmet": "^5.0.2",
+    "jsonwebtoken": "^9.0.1",
     "knex": "^2.0.0",
     "sqlite3": "^5.0.8"
   },
